cmake_minimum_required(VERSION 3.5)
project(leetcode_algorithm)

set (CMAKE_CXX_STANDARD 11)

add_executable(tinyURL 535_Encode_and_Decode_TinyURL/tinyURL.cpp)
# add_executable(hummingDistance 461_Hamming_Distance/hammingDistance.cpp)
# add_executable(mergeTwoBinaryTrees 617_merge_two_binary_trees/mergeTwoBinaryTrees.cpp)
